--- a/index.html
+++ b/index.html
@@ -163,7 +163,7 @@
       <a href="https://www.gob.mx/promosalud/es/archivo/articulos?idiom=es&order=DESC&page=6">Blog</a>
     </nav>
     <div class="buttons">
-      <a href="#" class="empieza">Empezar</a>
+      <a href="https://www.veed.io/edit/aaf7cab3-b59c-42a3-8d80-5ff1ef77d9b6" class="empieza">Empezar</a>
     </div>
   </header>
 
